src/App.css
  @import url('https://fonts.googleapis.com/css2?family=Bakbak+One&family=Fredericka+the+Great&display=swap');


.App {
  text-align: center;
  display:grid; 
  grid-template-columns: 25% 75%;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.heart {
  color: #ff0000;
}

.small {
  font-size: 0.75rem;
}
.sidebar{
  width: 95%;
  height: 99vh; 
} 
.content{
  width: 100%;
  height: 99vh;
  border: 1px solid;
  overflow: auto;
}
.active-form{
  background-color: #785589;
  color: white;
  cursor:pointer;
  font-family: 'Fredericka the Great';
font-style: normal;
font-weight: 400;
font-size: 32px;
display: flex;
flex-direction: column;
}
.active-form:hover >.trash-sidebar{
  display: block;
}

.form{
font-family: 'Fredericka the Great';
font-style: normal;
font-weight: 400;
font-size: 32px;
color: #000000;
cursor: pointer;
display: flex;
flex-direction: column;

}
.form:hover >.trash-sidebar{
  display: block;
  
}

.trash-sidebar{
display: none;
background: none;
border:none;

}
.fa-trash{
cursor: pointer;
color:#ff0000;
}
.input:hover > .input-trash{
  display: block;
}
.input-trash{
  display: none;
background: none;
border:none;
}
.form-content{
display: grid;
height: 100 vh;
grid-template-columns: 2.5 fr  2fr 2fr; 
grid-template-rows: 0.75fr 1fr 1fr 1fr;
grid-template-areas:
"income math math math"
"expense math math  math"
"asset  asset lia lia"
}
.income{
  grid-area: income;
  
}
.Expenses{
  grid-area: expense;
}
.Asset{
  grid-area: asset;
}
.Liabilites{
  grid-area: lia;
}
.math-section{
  grid-area:math;
}
.sidetoside{
  display:flex;
  flex-direction:column;
 
}

.input{
  display:flex;
  justify-content: end;
  align-items: center;
  margin-top: 5px;
  margin-bottom: 15px;
  
}
.input-col{
  display: flex;
  flex-direction:column;
}

.input-space{
 
  margin-right: 0.2rem;
}

